src/stage1/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package stage1;

public class Parser implements ParserConstants {
  public static void main(String args []) throws ParseException
  {
    Parser parser;

    if (args.length == 1) {
      try {
        parser = new Parser(new java.io.FileInputStream(args[0]));
      } catch (java.io.FileNotFoundException e) {
        System.out.println("File "+args[0]+ " not found," +
            " reading from terminal instead");
        parser = new Parser(System.in);
      }
    } else {
      parser = new Parser(System.in);
    }
    parser.Start();
    System.out.println("Parsed Successfully");
  }

  static final public void Start() throws ParseException {
    label_1:
    while (true) {
      Class();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(0);
  }

  static final public void Class() throws ParseException {
    jj_consume_token(CLASS);
    jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EXTENDS:
      Super();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(LCB);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PRIVATE:
      case PROTECTED:
      case PUBLIC:
      case STATIC:
      case BOOLEAN:
      case CHAR:
      case VOID:
      case INTEGER:
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      Member();
    }
    jj_consume_token(RCB);
  }

  static final public void Super() throws ParseException {
    jj_consume_token(EXTENDS);
    jj_consume_token(ID);
  }

  static final public void Member() throws ParseException {
    if (jj_2_1(10)) {
      Method();
    } else if (jj_2_2(10)) {
      Ctor();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PRIVATE:
      case PROTECTED:
      case PUBLIC:
      case STATIC:
      case BOOLEAN:
      case CHAR:
      case VOID:
      case INTEGER:
      case ID:
        Field();
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void Field() throws ParseException {
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PRIVATE:
      case PROTECTED:
      case PUBLIC:
      case STATIC:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      Modifier();
    }
    Type();
    VarDeclaratorList();
    jj_consume_token(SCOLON);
  }

  static final public void Method() throws ParseException {
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PRIVATE:
      case PROTECTED:
      case PUBLIC:
      case STATIC:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      Modifier();
    }
    Type();
    jj_consume_token(ID);
    jj_consume_token(LP);
    FormalArgs();
    jj_consume_token(RP);
    Block();
  }

  static final public void Ctor() throws ParseException {
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PRIVATE:
      case PROTECTED:
      case PUBLIC:
      case STATIC:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_5;
      }
      Modifier();
    }
    jj_consume_token(ID);
    jj_consume_token(LP);
    FormalArgs();
    jj_consume_token(RP);
    Block();
  }

  static final public void Modifier() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STATIC:
      jj_consume_token(STATIC);
      break;
    case PUBLIC:
      jj_consume_token(PUBLIC);
      break;
    case PRIVATE:
      jj_consume_token(PRIVATE);
      break;
    case PROTECTED:
      jj_consume_token(PROTECTED);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void FormalArgs() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case CHAR:
    case VOID:
    case INTEGER:
    case ID:
      FormalArgList();
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
  }

  static final public void FormalArgList() throws ParseException {
    FormalArg();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      FormalArgList();
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
  }

  static final public void FormalArg() throws ParseException {
    Type();
    VarDeclaratorId();
  }

  static final public void Type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case CHAR:
    case VOID:
    case INTEGER:
      PrimitiveType();
      Type2();
      break;
    case ID:
      jj_consume_token(ID);
      Type2();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Type2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LSB:
      jj_consume_token(LSB);
      jj_consume_token(RSB);
      Type2();
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
  }

  static final public void PrimitiveType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
      jj_consume_token(BOOLEAN);
      break;
    case CHAR:
      jj_consume_token(CHAR);
      break;
    case INTEGER:
      jj_consume_token(INTEGER);
      break;
    case VOID:
      jj_consume_token(VOID);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void VarDeclaratorList() throws ParseException {
    VarDeclarator();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      VarDeclaratorList();
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
  }

  static final public void VarDeclarator() throws ParseException {
    VarDeclaratorId();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASSIGN:
      jj_consume_token(ASSIGN);
      Expression();
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
  }

  static final public void VarDeclaratorId() throws ParseException {
    jj_consume_token(ID);
    VarDeclaratorId2();
  }

  static final public void VarDeclaratorId2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LSB:
      jj_consume_token(LSB);
      jj_consume_token(RSB);
      VarDeclaratorId2();
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
  }

  static final public void Block() throws ParseException {
    jj_consume_token(LCB);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BREAK:
      case CONTINUE:
      case IF:
      case NEW:
      case RETURN:
      case SUPER:
      case THIS:
      case WHILE:
      case BOOLEAN:
      case CHAR:
      case VOID:
      case INTEGER:
      case TRUE:
      case FALSE:
      case CHARLITERAL:
      case STRINGLITERAL:
      case NULL:
      case LP:
      case LCB:
      case SCOLON:
      case NOT:
      case PLUS:
      case MINUS:
      case ID:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_6;
      }
      Statement();
    }
    jj_consume_token(RCB);
  }

  static final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SCOLON:
      jj_consume_token(SCOLON);
      break;
    case IF:
      jj_consume_token(IF);
      jj_consume_token(LP);
      Expression();
      jj_consume_token(RP);
      Statement();
      if (jj_2_3(2)) {
        jj_consume_token(ELSE);
        Statement();
      } else {
        ;
      }
      break;
    case WHILE:
      jj_consume_token(WHILE);
      jj_consume_token(LP);
      Expression();
      jj_consume_token(RP);
      Statement();
      break;
    case RETURN:
      jj_consume_token(RETURN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NEW:
      case SUPER:
      case THIS:
      case INTEGER:
      case TRUE:
      case FALSE:
      case CHARLITERAL:
      case STRINGLITERAL:
      case NULL:
      case LP:
      case NOT:
      case PLUS:
      case MINUS:
      case ID:
        Expression();
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
      jj_consume_token(SCOLON);
      break;
    case CONTINUE:
      jj_consume_token(CONTINUE);
      jj_consume_token(SCOLON);
      break;
    case BREAK:
      jj_consume_token(BREAK);
      jj_consume_token(SCOLON);
      break;
    case LCB:
      Block();
      break;
    default:
      jj_la1[18] = jj_gen;
      if (jj_2_4(3)) {
        Expression();
        jj_consume_token(SCOLON);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOLEAN:
        case CHAR:
        case VOID:
        case INTEGER:
        case ID:
          Type();
          VarDeclaratorList();
          jj_consume_token(SCOLON);
          break;
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

//Mathematical expression productions start here
  static final public void Expression() throws ParseException {
    St();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASSIGN:
      jj_consume_token(ASSIGN);
      Expression();
      break;
    default:
      jj_la1[20] = jj_gen;
      ;
    }
  }

  static final public void St() throws ParseException {
    L();
    St2();
  }

  static final public void St2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OR:
      jj_consume_token(OR);
      L();
      St2();
      break;
    default:
      jj_la1[21] = jj_gen;
      ;
    }
  }

  static final public void L() throws ParseException {
    M();
    L2();
  }

  static final public void L2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
      jj_consume_token(AND);
      M();
      L2();
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
  }

  static final public void M() throws ParseException {
    N();
    M2();
  }

  static final public void M2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQUAL:
    case NOTEQUAL:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUAL:
        jj_consume_token(EQUAL);
        N();
        M2();
        break;
      case NOTEQUAL:
        jj_consume_token(NOTEQUAL);
        N();
        M2();
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[24] = jj_gen;
      ;
    }
  }

  static final public void N() throws ParseException {
    P();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case GREATER:
    case LESSER:
    case GREATEREQ:
    case LESSEREQ:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LESSEREQ:
        jj_consume_token(LESSEREQ);
        break;
      case GREATEREQ:
        jj_consume_token(GREATEREQ);
        break;
      case LESSER:
        jj_consume_token(LESSER);
        break;
      case GREATER:
        jj_consume_token(GREATER);
        break;
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      P();
      break;
    default:
      jj_la1[26] = jj_gen;
      ;
    }
  }

  static final public void P() throws ParseException {
    Q();
    P2();
  }

  static final public void P2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
    case MINUS:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
        Q();
        P2();
        break;
      case MINUS:
        jj_consume_token(MINUS);
        Q();
        P2();
        break;
      default:
        jj_la1[27] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[28] = jj_gen;
      ;
    }
  }

  static final public void Q() throws ParseException {
    R();
    Q2();
  }

  static final public void Q2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MULTIPLY:
    case DIVIDE:
    case MODULO:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
        jj_consume_token(MULTIPLY);
        R();
        Q2();
        break;
      case DIVIDE:
        jj_consume_token(DIVIDE);
        R();
        Q2();
        break;
      case MODULO:
        jj_consume_token(MODULO);
        R();
        Q2();
        break;
      default:
        jj_la1[29] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[30] = jj_gen;
      ;
    }
  }

  static final public void R() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
    case PLUS:
    case MINUS:
      UnaryOp();
      Expression();
      break;
    case NEW:
    case SUPER:
    case THIS:
    case INTEGER:
    case TRUE:
    case FALSE:
    case CHARLITERAL:
    case STRINGLITERAL:
    case NULL:
    case LP:
    case ID:
      Primary();
      break;
    default:
      jj_la1[31] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/*
void Expression():{}
{
  UnaryOp() Expression() Expression2() | Primary() Expression2()
}

void Expression2():{}{
  BinaryOp() Expression() Expression2() | <EMPTY>    //empty prod}

void BinaryOp():{}
{
  <ASSIGN> | <OR> | <AND> | <EQUAL> | <NOTEQUAL> | <LESSER> | <GREATER> | <LESSEREQ> | <GREATEREQ> | <PLUS> | <MINUS> | <MULTIPLY> | <DIVIDE> | <MODULO> 
}
*/
  static final public void UnaryOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
      jj_consume_token(MINUS);
      break;
    case PLUS:
      jj_consume_token(PLUS);
      break;
    case NOT:
      jj_consume_token(NOT);
      break;
    default:
      jj_la1[32] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/**
void Primary():{}       //changed production here to remove recursion
{
  NewArrayExpr() Primary2() | NonNewArrayExpr() Primary2() | <ID> Primary2() 
}
**/
  static final public void Primary() throws ParseException {
    if (jj_2_5(3)) {
      NewArrayExpr();
      Primary2();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER:
      case TRUE:
      case FALSE:
      case CHARLITERAL:
      case STRINGLITERAL:
      case NULL:
        Literal();
        NonNewArrayExpr2();
        Primary2();
        break;
      case THIS:
        jj_consume_token(THIS);
        NonNewArrayExpr2();
        Primary2();
        break;
      case LP:
        jj_consume_token(LP);
        Expression();
        jj_consume_token(RP);
        NonNewArrayExpr2();
        Primary2();
        break;
      default:
        jj_la1[36] = jj_gen;
        if (jj_2_6(3)) {
          jj_consume_token(NEW);
          jj_consume_token(ID);
          ActualArgs();
          NonNewArrayExpr2();
          Primary2();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SUPER:
            jj_consume_token(SUPER);
            jj_consume_token(DOT);
            jj_consume_token(ID);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case LP:
              ActualArgs();
              NonNewArrayExpr2();
              break;
            default:
              jj_la1[33] = jj_gen;
              ;
            }
            Primary2();
            break;
          case ID:
            jj_consume_token(ID);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case LP:
              ActualArgs();
              NonNewArrayExpr2();
              Primary2();
              break;
            default:
              jj_la1[35] = jj_gen;
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case LSB:
                Dimension();
                break;
              default:
                jj_la1[34] = jj_gen;
                ;
              }
              NonNewArrayExpr2();
              Primary2();
            }
            break;
          default:
            jj_la1[37] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
  }

  static final public void Primary2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DOT:
      jj_consume_token(DOT);
      jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LP:
        ActualArgs();
        break;
      default:
        jj_la1[38] = jj_gen;
        ;
      }
      Primary2();
      break;
    default:
      jj_la1[39] = jj_gen;
      ;
    }
  }

  static final public void NewArrayExpr() throws ParseException {
    jj_consume_token(NEW);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      jj_consume_token(ID);
      break;
    case BOOLEAN:
    case CHAR:
    case VOID:
    case INTEGER:
      PrimitiveType();
      break;
    default:
      jj_la1[40] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_7:
    while (true) {
      Dimension();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LSB:
        ;
        break;
      default:
        jj_la1[41] = jj_gen;
        break label_7;
      }
    }
  }

  static final public void Dimension() throws ParseException {
    jj_consume_token(LSB);
    Expression();
    jj_consume_token(RSB);
  }

  static final public void NonNewArrayExpr() throws ParseException {
    if (jj_2_7(3)) {
      Literal();
      NonNewArrayExpr2();
    } else if (jj_2_8(3)) {
      jj_consume_token(THIS);
      NonNewArrayExpr2();
    } else if (jj_2_9(3)) {
      jj_consume_token(LP);
      Expression();
      jj_consume_token(RP);
      NonNewArrayExpr2();
    } else if (jj_2_10(3)) {
      jj_consume_token(NEW);
      jj_consume_token(ID);
      ActualArgs();
      NonNewArrayExpr2();
    } else if (jj_2_11(3)) {
      jj_consume_token(ID);
      ActualArgs();
      NonNewArrayExpr2();
    } else if (jj_2_12(3)) {
      jj_consume_token(SUPER);
      jj_consume_token(DOT);
      jj_consume_token(ID);
      ActualArgs();
      NonNewArrayExpr2();
    } else if (jj_2_13(3)) {
      ArrayExpr();
      NonNewArrayExpr2();
    } else if (jj_2_14(3)) {
      FieldExpr();
      NonNewArrayExpr2();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void NonNewArrayExpr2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LSB:
      Dimension();
      NonNewArrayExpr2();
      break;
    default:
      jj_la1[42] = jj_gen;
      ;
    }
  }

  static final public void FieldExpr() throws ParseException {
    if (jj_2_15(3)) {
      Primary();
      jj_consume_token(DOT);
      jj_consume_token(ID);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SUPER:
        jj_consume_token(SUPER);
        jj_consume_token(DOT);
        jj_consume_token(ID);
        break;
      default:
        jj_la1[43] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void ArrayExpr() throws ParseException {
    jj_consume_token(ID);
    Dimension();
  }

  static final public void Literal() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NULL:
      jj_consume_token(NULL);
      break;
    case TRUE:
      jj_consume_token(TRUE);
      break;
    case FALSE:
      jj_consume_token(FALSE);
      break;
    case INTEGER:
      jj_consume_token(INTEGER);
      break;
    case CHARLITERAL:
      jj_consume_token(CHARLITERAL);
      break;
    case STRINGLITERAL:
      jj_consume_token(STRINGLITERAL);
      break;
    default:
      jj_la1[44] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ActualArgs() throws ParseException {
    jj_consume_token(LP);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NEW:
    case SUPER:
    case THIS:
    case INTEGER:
    case TRUE:
    case FALSE:
    case CHARLITERAL:
    case STRINGLITERAL:
    case NULL:
    case LP:
    case NOT:
    case PLUS:
    case MINUS:
    case ID:
      ExprList();
      break;
    default:
      jj_la1[45] = jj_gen;
      ;
    }
    jj_consume_token(RP);
  }

  static final public void ExprList() throws ParseException {
    Expression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      ExprList();
      break;
    default:
      jj_la1[46] = jj_gen;
      ;
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
